fixed layout shift

--- a/src/app/(site)/layout.module.css
+++ b/src/app/(site)/layout.module.css
@@ -4,6 +4,7 @@
 
 .layout {
     overflow-x: hidden;
+    overflow-y: hidden;
     position: relative;
     min-height: 100vh;
 }
