--- a/src/components/(site)/subhero/subhero.module.css
+++ b/src/components/(site)/subhero/subhero.module.css
@@ -6,6 +6,8 @@
         width: 100vw;
         overflow: hidden;
         position: relative;
+        max-height: 50vh;
+        height: 50vh;
         display: flex;
         justify-content: center;
     }
@@ -47,11 +49,10 @@ background: linear-gradient(to top, rgb(3, 7, 18, 0.5), transparent, transparent
     
     .header {
         height: 100%;
-        max-height: calc(100% - 4rem);
         max-width: 1400px;
         width: 100%;
         position: absolute;
-        top: 4rem;
+        /* top: 4rem; */
         display: flex;
         align-items: center;
         justify-content: center;
@@ -88,7 +89,7 @@ background: linear-gradient(to top, rgb(3, 7, 18, 0.5), transparent, transparent
         .subhero {
             /* max-height: 50vh; */
             min-height: 35vh;
-            height: calc(50vh + 4rem + 5px);
+            height: 50vh;
             max-width: 1920px;
             margin: 0 auto;
         }
